--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -3,7 +3,7 @@
 <app-manifesto></app-manifesto>
 <app-works></app-works>
 <app-customers></app-customers>
-<app-statistics></app-statistics>
+<app-statistics [items]="items" [title]="settings.settings?.state_title"></app-statistics>
 <app-form></app-form>
 
 
