--- a/frontend/src/app/pages/components/form/form.component.scss
+++ b/frontend/src/app/pages/components/form/form.component.scss
@@ -21,12 +21,16 @@
 
 .form-item {
   border-bottom: 1px solid var(--black);
+  font-size: 25px;
+  line-height: 30px;
+  font-family: 'WilliamTextLC', serif;
 
   input {
     width: 80%;
     height: 40px;
     font-size: 24px;
     font-weight: 400;
+    font-family: 'WilliamTextLC', serif;
     //color: rgba(0, 0, 0, 0.5);
   }
 }
@@ -54,6 +58,9 @@
 
 textarea {
   height: 200px;
+  font-size: 25px;
+  line-height: 30px;
+  font-family: 'WilliamTextLC', serif;
 
   &::placeholder {
     font-size: 24px;
