--- a/frontend/src/app/pages/components/main-screen/main-screen.component.html
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.html
@@ -23,7 +23,7 @@
           class="mb-60 w-94"
           width="100%"
           height="100%"
-          [src]="url(item.video, item.index == page) | safe"
+          [src]="url(item.video, hovered && item.index == page) | safe"
           frameBorder="0"
           allow="autoplay; clipboard-write; encrypted-media;"
         ></iframe>
