--- a/frontend/src/app/pages/components/main-screen/main-screen.component.scss
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.scss
@@ -18,10 +18,6 @@
     background-position: top;
     background-size: cover;
     background-repeat: no-repeat;
-    //position: absolute;
-    //right: 0;
-    //bottom: 0;
-    //overflow: hidden;
   }
 
   .content {
@@ -38,66 +34,10 @@
       backdrop-filter: blur(40px);
     }
 
-    .border {
-      //border-left: 1px solid var(--white);
-      margin-left: 42px;
-      height: calc(100% - 84px);
-    }
-
     .logo {
       width: 50%;
     }
   }
-
-  @media (max-width: 999px) {
-
-    .content {
-      .border {
-        border-left: none;
-        margin-left: 0;
-        height: 0;
-      }
-    }
-
-  }
-
-  @media (min-width: 1000px) and (max-width: 2000px) {
-    .content {
-      .logo {
-        width: 40%;
-        margin-top: 113px;
-        margin-left: 26px;
-      }
-    }
-  }
-
-  //@media (min-width: 1451px) and (max-width: 2000px) {
-  //  .content {
-  //    .logo {
-  //      width: 41%;
-  //    }
-  //  }
-  //}
-
-  @media (min-width: 768px) and (max-width: 999px) {
-
-    .content {
-      .logo {
-        width: 65%;
-      }
-    }
-  }
-
-  @media (min-width: 370px) and (max-width: 767px) {
-
-    .content {
-      .logo {
-        width: 80%;
-      }
-    }
-
-  }
-
 }
 
 .p-carousel-content-container {
@@ -130,4 +70,178 @@
     }
   }
 
+}
+
+@media (max-width: 999px) {
+
+  .content {
+    .border {
+      border-left: none;
+      margin-left: 0;
+      height: 0;
+    }
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 999px) {
+
+  .content {
+    .logo {
+      width: 65%;
+    }
+  }
+}
+
+@media (min-width: 370px) and (max-width: 767px) {
+
+  .content {
+    .logo {
+      width: 80%;
+    }
+  }
+
+}
+
+//PC
+
+@media (min-width: 1351px) and (max-width: 1900px) {
+  .home-slide {
+
+    .content {
+
+      .logo {
+        width: 539.05px;
+      }
+    }
+
+  }
+}
+
+@media (min-width: 1901px) and (max-width: 2700px) {
+  .home-slide {
+
+    .content {
+
+      .logo {
+        width: 742px;
+      }
+    }
+  }
+}
+
+@media (min-width: 2701px) and (max-width: 3000px) {
+  .home-slide {
+
+    .content {
+
+      .logo {
+        width: 1078.1px;
+      }
+    }
+
+  }
+}
+
+@media (min-width: 1351px) and (max-width: 1900px) {
+  .p-carousel-content-container {
+    position: relative;
+
+    .p-carousel-indicator-list {
+      position: absolute;
+      gap: 7px;
+      bottom: 130px;
+      left: 41px;
+
+      li {
+        &:before {
+          display: none;
+        }
+
+        .p-carousel-indicator-button {
+          width: 10px;
+          height: 10px;
+          border-radius: 50%;
+          border: 2px solid #FFF;
+          background: #FFF;
+        }
+
+        &.p-carousel-indicator-active {
+          .p-carousel-indicator-button {
+            background: transparent;
+          }
+        }
+      }
+    }
+
+  }
+
+}
+
+@media (min-width: 1901px) and (max-width: 2700px) {
+  .p-carousel-content-container {
+    position: relative;
+
+    .p-carousel-indicator-list {
+      position: absolute;
+      gap: 7px;
+      bottom: 170px;
+      left: 62px;
+
+      li {
+        &:before {
+          display: none;
+        }
+
+        .p-carousel-indicator-button {
+          width: 15px;
+          height: 15px;
+          border-radius: 50%;
+          border: 2px solid #FFF;
+          background: #FFF;
+        }
+
+        &.p-carousel-indicator-active {
+          .p-carousel-indicator-button {
+            background: transparent;
+          }
+        }
+      }
+    }
+
+  }
+}
+
+@media (min-width: 2701px) and (max-width: 3000px) {
+  .p-carousel-content-container {
+    position: relative;
+
+    .p-carousel-indicator-list {
+      position: absolute;
+      gap: 10px;
+      bottom: 264px;
+      left: 82px;
+
+      li {
+        &:before {
+          display: none;
+        }
+
+        .p-carousel-indicator-button {
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          border: 2px solid #FFF;
+          background: #FFF;
+        }
+
+        &.p-carousel-indicator-active {
+          .p-carousel-indicator-button {
+            background: transparent;
+          }
+        }
+      }
+    }
+
+  }
 }
