--- a/frontend/src/app/pages/components/manifesto/manifesto.component.scss
+++ b/frontend/src/app/pages/components/manifesto/manifesto.component.scss
@@ -18,10 +18,14 @@
   }
 }
 
-@media (min-width: 1000px) and (max-width: 1450px) {
+@media (min-width: 1000px) and (max-width: 1350px) {
   .padding {
-    padding-top: 300px;
-    padding-bottom: 110px;
+    padding-top: 225.5px;
+    padding-bottom: 108px;
+  }
+
+  .gap-10 {
+    gap: 32px;
   }
 
   .w-95 {
@@ -29,17 +33,47 @@
   }
 }
 
-@media (min-width: 1451px) and (max-width: 2000px) {
+@media (min-width: 1351px) and (max-width: 1900px) {
   .padding {
-    padding-top: 350px;
-    padding-bottom: 130px;
+    padding-top: 225.5px;
+    padding-bottom: 108px;
   }
 
   .gap-10 {
-    gap: 20px;
+    gap: 32px;
   }
 
   .w-95 {
-    width: 76%;
+    width: 70%;
+  }
+}
+
+@media (min-width: 1901px) and (max-width: 2700px) {
+  .padding {
+    padding-top: 349.19px;
+    padding-bottom: 129.80px;
+  }
+
+  .gap-10 {
+    gap: 32px;
+  }
+
+  .w-95 {
+    width: 80%;
+  }
+}
+
+@media (min-width: 2701px) and (max-width: 3000px) {
+  .padding {
+    padding-top: 511px;
+    padding-bottom: 217px;
+  }
+
+  .gap-10 {
+    gap: 64px;
+  }
+
+  .w-95 {
+    width: 85%;
   }
 }
