--- a/frontend/src/app/pages/components/statistics/statistics.component.html
+++ b/frontend/src/app/pages/components/statistics/statistics.component.html
@@ -2,8 +2,8 @@
   <div class="container d-flex direction-column">
     <markdown *ngIf="title" class="text-title mb-60 w-80" [data]="title"></markdown>
     <div class="d-flex direction-row flex-wrap">
-      <div class="section d-flex direction-column" *ngFor="let item of items">
-        <div class="count mb-50">{{item.count}}</div>
+      <div class="section d-flex direction-column j-c-space-between" *ngFor="let item of items">
+        <div class="count">{{item.count}}</div>
         <div class="text-black w-70">{{item.text}}</div>
       </div>
 
