--- a/frontend/src/app/pages/components/main-screen/main-screen.component.html
+++ b/frontend/src/app/pages/components/main-screen/main-screen.component.html
@@ -29,8 +29,9 @@
         ></iframe>
       </div>
       <div [class]="'content w-100 d-flex a-i-center j-c-center ' + (item.apply_blur ? 'blur' : '')">
-        <div class="w-100 h-100 d-flex a-i-center j-c-center border">
-          <img *ngIf="item.show_logo" src="images/biglogo.svg" alt="logo" class="mb-50 logo"/>
+        <div class="w-100 h-100 d-flex a-i-center j-c-center">
+          <!--          <img *ngIf="item.show_logo" src="images/biglogo.svg" alt="logo" class="logo"/>-->
+          <img src="images/biglogo.svg" alt="logo" class="logo"/>
           <div class="bottom-container d-flex direction-column j-c-start gap-10">
             <!--            <img src="images/circles.svg" class="circles" alt="icon"/>-->
             <a *ngIf="!item.link" [href]="item.link">
