--- a/frontend/src/app/components/mobile-header/mobile-header.component.html
+++ b/frontend/src/app/components/mobile-header/mobile-header.component.html
@@ -1,11 +1,12 @@
 <div class="popup">
   <div class="container d-flex direction-column j-c-space-between a-i-start h-100">
     <div class="d-flex direction-column gap-10" style="margin-top: 150px">
-      <a routerLink="/" (click)="toSection('services')" class="text-black">Услуги</a>
-      <a routerLink="/" (click)="toSection('works')" class="text-black">Работы</a>
-      <a (click)="close.emit()" routerLink="/contacts" class="text-black">Контакты</a>
-      <a (click)="close.emit()" routerLink="/team" class="text-black">Команда</a>
-      <a (click)="close.emit()" routerLink="/merch" class="text-black">Стор</a>
+      <a
+        *ngFor="let item of settings.settings?.menu"
+        [routerLink]="getLink(item)"
+        (click)="toSection(item, $event)"
+        class="text-black"
+      >{{item.name}}</a>
     </div>
     <div class="d-flex direction-column gap-30">
       <div class="d-flex direction-column gap-5">
