--- a/frontend/src/app/pages/components/works/works.component.html
+++ b/frontend/src/app/pages/components/works/works.component.html
@@ -1,8 +1,8 @@
 <div class="w-100 background-white">
   <div class="d-flex direction-column container">
     <div class="w-100 d-flex j-c-space-between a-i-end mb-60">
-      <h2>Работы</h2>
-      <div class="text-black ml-auto w-auto">Все работы</div>
+      <h2>Проекты</h2>
+      <div class="text-black ml-auto w-auto">Все проекты</div>
     </div>
     <app-slider></app-slider>
   </div>
