--- a/frontend/src/app/pages/team/team.component.html
+++ b/frontend/src/app/pages/team/team.component.html
@@ -1,17 +1,10 @@
 <div class="merch">
   <div class="team-content w-100 d-flex">
     <div class="d-flex direction-column a-i-start w-100 team-content-container">
-      <div class="text-title w-80 mb-400">Команда героев на пути своих приключений справится с любой миссией, <span>когда их
-        объединяет товарищество и зов мечты.</span> Присылай портфолио на hello{{'@'}}brainstore.agency и начни свой
-        квест!
-      </div>
-      <div class="w-50 text-black mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
-        hello{{'@'}}brainstore.agency
-      </div>
-      <img src="images/team.png" alt="picture" class="mb-60 w-94"/>
-      <div class="text-gray w-50 mb-400">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед Попов, Серега
-        Федотов, Ксения Хозяева, Александ Калугин, Валиахмед Попов, Ксения Хозяева
-      </div>
+      <markdown class="text-title w-80 mb-400" [data]="settings.settings?.team_description"></markdown>
+      <markdown class="w-50 text-black mb-80" [data]="settings.settings?.contacts_sub_description"></markdown>
+      <img [src]="settings.settings?.team_image_url" alt="picture" class="mb-60 w-94"/>
+      <markdown class="text-gray w-50 mb-400" [data]="settings.settings?.contacts_image_description"></markdown>
       <app-manifesto class="mb-200 ml5"></app-manifesto>
       <app-works class="mb-400 ml7"></app-works>
       <app-form class="ml5"></app-form>
