--- a/frontend/src/app/pages/contacts/contacts.component.html
+++ b/frontend/src/app/pages/contacts/contacts.component.html
@@ -1,21 +1,20 @@
-<div class="merch">
-  <div class="team-content w-100 d-flex">
-    <div class="d-flex direction-column a-i-start w-100 team-content-container">
-      <div class="text-title w-80 mb-400">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
-        hello{{'@'}}brainstore.agency с пометкой желаемой должности в теме письма<span> и не забывай
+<div class="team-content w-100">
+  <div class="d-flex direction-column a-i-start w-100 container">
+    <div class="text-title w-80 mb-400">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
+      <span style="color: var(--text-gray);">hello{{'@'}}brainstore.agency</span> с пометкой желаемой должности в теме
+      письма<span> и не забывай
 прикрепить портфолио!</span>
-      </div>
-      <div class="w-50 text-black mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
-        hello{{'@'}}brainstore.agency
-      </div>
-      <img src="images/contacts.png" alt="picture" class="mb-60 w-94"/>
-      <div class="text-gray w-50 mb-400 mobile-margin">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед
-        Попов, Серега
-        Федотов, Ксения Хозяева, Александ Калугин, Валиахмед Попов, Ксения Хозяева
-      </div>
-      <app-manifesto class="mb-200 ml5"></app-manifesto>
-      <app-works class="mb-400 ml7 mobile-margin"></app-works>
-      <app-form class="ml5"></app-form>
+    </div>
+    <div class="w-50 text-black mb-80">Если ты талантливый, идейный и, главное, хочешь к нам в команду, пиши на почту
+      hello{{'@'}}brainstore.agency
+    </div>
+    <img src="images/contacts.png" alt="picture" class="mb-60 w-94"/>
+    <div class="text-gray mb-401 mobile-margin">Ксения Хозяева, Серега Федотов, Александ Калугин, Валиахмед
+      Попов, Серега Федотов, Ксения Хозяева, Александ Калугин, Валиахмед Попов, Ксения Хозяева
     </div>
   </div>
+  <app-manifesto class=""></app-manifesto>
+  <app-works class=""></app-works>
+  <app-form class=""></app-form>
 </div>
+
